--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 ## Link to the Behance Account
 
-[Behance Page] (https://www.behance.net/gallery/79617763/Final-Reflection)
+View the Behance page [Here](https://www.behance.net/gallery/79617763/Final-Reflection)
